Vistas signup y login (falta pulir) + funcionalidad

--- a/templates/cuentas/index.html
+++ b/templates/cuentas/index.html
@@ -12,7 +12,7 @@
   <header>
     <h1>TFG</h1> 
   </header>
-  <button typwe="submit"> <a href="/signup">Signup</a></button>
-  <button typwe="submit"> <a href="/login">Login</a></button>
+  <button type="submit"> <a href="/signup">Signup</a></button>
+  <button type="submit"> <a href="/login">Login</a></button>
 </body>
 </html>
