--- a/templates/cuentas/signup.html
+++ b/templates/cuentas/signup.html
@@ -10,8 +10,54 @@
 </head>
 <body>
   <header>
-    <h1>Signup</h1> 
+    <div class="m-0 row justify-content-center">
+      <div class="col-auto p-5 text-center">
+          <h1 class="display-1"><strong>Create account</strong></h1>
+      </div>
+  </div>
   </header>
+  <div class="container">
+    <div class="row vh-80 justify-content-center align-items-center">
+        <div class="col-auto bg-light p-5 rounded">
+          
+            <form action="/signup" method="POST" enctype="multipart/form-data">
+              {% csrf_token %}
+                <h1 class="display-6 text-center">Create account</h1>
+                <div class="input-group p-2">
+                    <input type="text" name="username" class="form-control" id="floatingInput" placeholder="Username">
+                </div>
+                <div class="input-group p-2">
+                    <input type="text" name="firstname" class="form-control" id="floatingInput" placeholder="First name">
+                </div>
+                <div class="input-group p-2">
+                    <input type="text" name="lastname" class="form-control" id="floatingInput" placeholder="Last name">
+                </div>
+                <div class="input-group p-2">
+                    <input type="email" name="email" class="form-control" id="floatingInput" placeholder="E-mail address">
+                    
+                </div>
+                <div class="input-group">
+                    
+                </div>
+                <div class="input-group p-2">
+                    <input type="password" name="passwd" class="form-control" id="floatingInput" placeholder="Password" >
+                </div>
+                <div class="input-group">
+                    
+                </div>
+                <div class="input-group p-2">
+                    <input type="password" name="passwd2" class="form-control" id="floatingInput" placeholder="Confirm password" >
+                </div>
+                <div class="input-group">
+                    
+                </div>
+                <br>
+
+                <button type="submit" class="btn btn-primary w-100">Create account</button>
+            </form>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
