--- a/templates/cuentas/index.html
+++ b/templates/cuentas/index.html
@@ -5,14 +5,47 @@
   <title>Página principal</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'cuentas/styles.css' %}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  
   <link rel="icon" href="favicon.png">
 </head>
 <body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <header>
-    <h1>TFG</h1> 
+    <div class="m-0 row justify-content-center">
+      <div class="col-auto p-5 text-center">
+          <h1 class="display-1"><strong>TFG</strong></h1>
+      </div>
   </header>
-  <button type="submit"> <a href="/signup">Signup</a></button>
-  <button type="submit"> <a href="/login">Login</a></button>
+
+  {% with registrado=user.is_authenticated %}
+  <h2>{{ request.user.username }}</h2>
+  {% endwith %}
+
+  {% if request.user.is_authenticated %}
+  <div class="topright">
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        My account
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="/verifyPassword">Change settings</a></li>
+        <li><a class="dropdown-item" href="/logout">Log out</a></li>
+      </ul>
+    </div>
+  </div>
+  {% endif %}
+
+  <div class="container">
+    <div class="row vh-80 justify-content-center align-items-center">
+        <div class="col-auto bg-light p-5 rounded">
+        <a href="/signup" class="btn btn-primary btn-lg">Create account</a>
+        <br><br>
+        <a href="/signin" class="btn btn-primary btn-lg">Log in</a>
+        </div>
+    </div>
+  </div>
 </body>
 </html>
