--- a/templates/cuentas/login.html
+++ b/templates/cuentas/login.html
@@ -21,11 +21,24 @@
     <div class="row vh-80 justify-content-center align-items-center">
         
         <div class="col-auto bg-light p-5 rounded">
-            <form action="/login" method="POST" enctype="multipart/form-data">
+            <form action="/signin" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
+                {% if messages %}
+                {% for message in messages %}
+                {% if message.tags == "success" %}
+                <div class="alert alert-success" role="alert">
+                    {{ message }}
+                  </div>
+                {% elif message.tags == "error" %}
+                <div class="alert alert-danger" role="alert">
+                    {{ message }}
+                  </div>
+                {% endif %}
+                {% endfor %}
+                {% endif %}
                 <h1 class="display-6 text-center">Log in</h1>
                 <div class="input-group p-2">
-                    <input type="email" name="email" class="form-control" id="floatingInput" placeholder="E-mail address">
+                    <input type="text" name="username" class="form-control" id="floatingInput" placeholder="Username">
 
                 </div>
                 
