--- a/templates/cuentas/index.html
+++ b/templates/cuentas/index.html
@@ -31,7 +31,7 @@
         My account
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="/verifyPassword">Change settings</a></li>
+        <li><a class="dropdown-item" href="/modifyParameters">Change parameters</a></li>
         <li><a class="dropdown-item" href="/logout">Log out</a></li>
       </ul>
     </div>
@@ -41,6 +41,19 @@
   <div class="container">
     <div class="row vh-80 justify-content-center align-items-center">
         <div class="col-auto bg-light p-5 rounded">
+          {% if messages %}
+          {% for message in messages %}
+          {% if message.tags == "success" %}
+          <div class="alert alert-success" role="alert">
+              {{ message }}
+            </div>
+          {% elif message.tags == "error" %}
+          <div class="alert alert-danger" role="alert">
+              {{ message }}
+            </div>
+          {% endif %}
+          {% endfor %}
+          {% endif %}
         <a href="/signup" class="btn btn-primary btn-lg">Create account</a>
         <br><br>
         <a href="/signin" class="btn btn-primary btn-lg">Log in</a>
