--- a/templates/cuentas/modifyParameters.html
+++ b/templates/cuentas/modifyParameters.html
@@ -1,13 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <title>Modify parameters</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="" />
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'cuentas/styles.css' %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link rel="icon" href="favicon.png">
 </head>
 <body>
+  <header>
+    <div class="m-0 row justify-content-center">
+      <div class="col-auto p-5 text-center">
+          <h1 class="display-1"><strong>Modify parameters</strong></h1>
+      </div>
+  </div>
+  </header>
+  {% if messages %}
+  {% for message in messages %}
+  {% if message.tags == "success" %}
+  <div class="alert alert-success" role="alert">
+      {{ message }}
+    </div>
+  {% elif message.tags == "error" %}
+  <div class="alert alert-danger" role="alert">
+      {{ message }}
+    </div>
+  {% endif %}
+  {% endfor %}
+  {% endif %}
+  {% if verified is None %}
+  <h2 class="display-1"><strong>As a security measure, please verify your password first.</strong></h1>
+    <div class="m-0 row justify-content-center">
+        <div class="col-auto p-5 text-center">
+            <form action="/modifyParameters" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input type="hidden" id="verify" name="verify" value="verify" />
+                <h2 class="display-6 text-center">Verify password</h2>
+                <div class="input-group mb-3">
+                    <input type="password" name="password" class="form-control" placeholder="password" aria-describedby="button-addon2">
+                    <button class="btn btn-primary " type="submit" id="button-addon2">Verify</button>
+                </div>
+            </form>
+        </div>
+    </div>
+   {% else %}
+  <div class="container">
+    <div class="row vh-80 justify-content-center align-items-center">
+        <div class="col-auto bg-light p-5 rounded">
+          
+            <form action="/modifyParameters" method="POST" enctype="multipart/form-data">
+              {% csrf_token %}
+                <h1 class="display-6 text-center">Change settings</h1>
+                <div class="input-group p-2">
+                    <input type="text" name="username" class="form-control" id="floatingInput" placeholder="New username">
+                </div>
+                <div class="input-group p-2">
+                    <input type="text" name="firstname" class="form-control" id="floatingInput" placeholder="New first name">
+                </div>
+                <div class="input-group p-2">
+                    <input type="text" name="lastname" class="form-control" id="floatingInput" placeholder="New last name">
+                </div>
+                <div class="input-group p-2">
+                    <input type="email" name="email" class="form-control" id="floatingInput" placeholder="New e-mail address">
+                    
+                </div>
+                <div class="input-group">
+                    
+                </div>
+                <div class="input-group p-2">
+                    <input type="password" name="passwd" class="form-control" id="floatingInput" placeholder="New password" >
+                </div>
+                <div class="input-group">
+                    
+                </div>
+                <div class="input-group p-2">
+                    <input type="password" name="passwd2" class="form-control" id="floatingInput" placeholder="Confirm new password" >
+                </div>
+                <div class="input-group">
+                    
+                </div>
+                <br>
+
+                <button type="submit" class="btn btn-primary w-100">Save changes</button>
+            </form>
+            <br>
+            <form action="/modifyParameters" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input type="hidden" id="delete" name="delete" value="delete" />
+                <button type="submit" class="btn btn-danger" onclick="clicked(event)">Delete account</button>
+            </form>
+            <script>
+                function clicked(e)
+                {
+                    if(!confirm('Are you sure?')) {
+                        e.preventDefault();
+                    }
+                }
+                </script>
+        </div>
+    </div>
     
+    {% endif %}
+
 </body>
 </html>
