--- a/templates/cuentas/signup.html
+++ b/templates/cuentas/signup.html
@@ -12,11 +12,11 @@
 </head>
 <body>
   <header>
-    <div class="m-0 row justify-content-center">
-      <div class="col-auto p-5 text-center">
-          <h1 class="display-1"><strong>Create account</strong></h1>
+    <div class="m-0 align-items-center">
+      <div class="col-auto p-5 text-center ">
+          <h1 class="display-1">Sentence analyzer</h1>
       </div>
-  </div>
+    </div>
   </header>
   <div class="container">
     <div class="row vh-80 justify-content-center align-items-center">
