--- a/templates/cuentas/login.html
+++ b/templates/cuentas/login.html
@@ -5,6 +5,8 @@
   <title>Hello, world!</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'cuentas/styles.css' %}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="icon" href="favicon.png">
 </head>
@@ -12,9 +14,9 @@
   <header>
     <div class="m-0 row justify-content-center">
       <div class="col-auto p-5 text-center">
-          <h1 class="display-1"><strong>Log in</strong></h1>
+          <h1 class="display-1">Sentence analyzer</h1>
       </div>
-  </div>
+    </div>
   </header>
   <div class="container">
         
