--- a/templates/cuentas/analyze.html
+++ b/templates/cuentas/analyze.html
@@ -76,7 +76,8 @@
             {{ token.dep_ }}
             {% endfor %}
           </p>
-          <p style="padding:2vh">{{ constituency }}</p>
+          <!--<p style="padding:2vh">{{ constituency }}</p>-->
+          <img src="{% static resultspath %}" width="1000px" height="1000px" style="display: block; margin-left:auto; margin-right:auto;">
           {% elif method == "morphologic" %}
           {% for token in doc %}
           <p><b>{{ token.text }}:</b> {{ token.pos_ }}. {{ token.morph }}</p>
