--- a/templates/cuentas/analyze.html
+++ b/templates/cuentas/analyze.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Analizar</title>
+  <title>Analyze</title>
   {% load static %}
   <link rel="stylesheet" href="{% static 'cuentas/styles.css' %}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,30 +12,12 @@
 </head>
 
 <body>
-  <!--La pagina estaria dividida en 2 verticalmente por una linea, arriba estaria el cuadro para introducir la frase
-    y abajo saldría el resultado -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
   <header>
-    <div class="m-0 row justify-content-center">
-      <div class="col-auto p-5 text-center">
-        <h1 class="display-1">Sentence analyzer</h1>
-      </div>
-    </div>
+    {% include "cuentas/menu.html" %}
   </header>
-
-  <div class="topright">
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        My account
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="/modifyParameters">Change parameters</a></li>
-        <li><a class="dropdown-item" href="/logout">Log out</a></li>
-      </ul>
-    </div>
-  </div>
 
   <div class="container-fluid">
     <div class="half-top">
