--- a/templates/cuentas/menu.html
+++ b/templates/cuentas/menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-xl bg-body-tertiar bg-dark" data-bs-theme="dark">
+<nav class="navbar navbar-expand-xl bg-body-tertiar">
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,22 +7,22 @@
     <ul class="navbar-nav">
 
       <li class="nav-item">
-        <a href="/analyze" class="btn btn-dark">
+        <a href="/analyze" class="btn">
           Sentence analysis
         </a>
       </li>
 
       <li class="nav-item">
-        <a href="/tone" class="btn btn-dark">
+        <a href="/tone" class="btn">
           Tone changer
         </a>
       </li>
 
       <li class="nav-item dropdown">
-        <a class="btn btn-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           My account
         </a>
-        <ul class="dropdown-menu dropdown-menu-dark">
+        <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="/modifyParameters">Change parameters</a></li>
           <li><a class="dropdown-item" href="/logout">Log out</a></li>
         </ul>
