--- a/templates/cuentas/tone.html
+++ b/templates/cuentas/tone.html
@@ -16,15 +16,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <header>
-        {% include "cuentas/menu.html" %}
-    </header>
+        <div class="top">
+            {% include "cuentas/menu.html" %}
+        </div>
     <div class="container-fluid">
         <div class="half-top">
             <form action="/tone" method="POST">
                 {% csrf_token %}
                 <div class="row-auto">
                     <div class="col-auto">
+                        <h2 style="text-align:center">Change sentence's tone</h2>
                         <textarea wrap="off" name="sentence" value="sentence"></textarea>
                     </div>
                 </div>
