Primer modelo (elipsis) entrenado y probado un poco

--- a/templates/cuentas/analyze.html
+++ b/templates/cuentas/analyze.html
@@ -61,6 +61,8 @@
           <p style="padding:2vh">{{ constituency }}</p>-->
           <img src="{% static resultspath %}" width="600px" height="600px" style="margin-left:auto; margin-right:auto;">
 
+          <!--{{ ell }}-->
+
           <div class="downloadform">
           <form action="/download" method="POST">
             {% csrf_token %}
